# Selene-DP

./: .gitignore  README.md
src/dp_controller/: package.xml  setup.cfg  setup.py
src/dp_controller/dp_controller/: pid_controller.py  pid_controller_node.py
src/stonefish_sim/data/selene/: Aluminium.mtl  Black.mtl  Black_.mtl  Buoy.mtl  BuoyRow.mtl.mtl  SeaAngler.mtl  axmuth.mtl  azimuth_detailed.mtl  electronics_box.mtl  t200cw_propeller.mtl
src/stonefish_sim/drones/: selene.scn
src/stonefish_sim/launch/: simulation.launch.py
src/stonefish_sim/metadata/: looks.scn
src/stonefish_sim/scenarios/: selene_demo.scn
src/thrust_alloc/: package.xml  setup.cfg  setup.py
src/thrust_alloc/thrust_alloc/: allocation.py  allocation_node.py  thrust_allocation.py
