<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>thrust_alloc</name>
  <version>0.0.0</version>
  <description>Assigns force vector to thrusters</description>
  <maintainer email="andrava@stud.ntnu.no">andreas</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>rlcpy</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>python-osqp</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
